fixed some styles for table rows and data for account users on mobile and webpage

--- a/src/pages/Account/AccountChildUser.css
+++ b/src/pages/Account/AccountChildUser.css
@@ -72,10 +72,18 @@ table {
     justify-content: space-between;
 }
 
-td, tr {
-    display: flex;
-    flex: 1 1 0px;
+@media (max-width: 479px) {
+    td, tr {
+        flex: 0;
+    }
 
+    td {
+        max-width: 160px;
+    }
+}
+
+td {
+    max-width: 250px;
 }
 
 tr {
